<resources>
    <string name="app_name">cookbook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="save">save</string>
    <string name="description">Description</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="ingredients">Ingredients</string>
    <string name="title">Title</string>
    <string name="add_recipe">add recipe</string>
    <string name="add_new_recipe">New Recipe</string>
    <string name="fragment_home_label">My Recipe</string>
    <string name="name">name</string>
    <string name="amount">amount</string>
    <string name="unit">unit</string>
    <string name="delete_recipe">delete recipe</string>
    <string name="description_of_the_preparation">Description of the preparation</string>
    />
</resources>