<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <EditText
        android:id="@+id/name"
        android:layout_weight="50"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLength="20" />

    <EditText
        android:id="@+id/amount"
        android:layout_weight="20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:maxLength="5" />

    <EditText
        android:id="@+id/unit"
        android:layout_weight="30"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/unit"
        android:inputType="text"
        android:maxLength="3" />

</LinearLayout>